# llm_chatbot

./: .gitignore
.github/workflows/: ci.yml
backend/: README.md  compose.yaml  init.cql  pyproject.toml
backend/api/: main.py
backend/api/domain/: models.py
backend/api/infra/: __init__.py  db.py  llm.py
backend/cql/: create_keyspace_chatbot.cql  create_table_conversations.cql  create_table_messages.cql
backend/tests/: conftest.py  test_infra_db.py  test_infra_llm.py  test_main.py
frontend/: README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css
frontend/src/client/: index.ts  sdk.gen.ts  stream.ts  types.gen.ts
frontend/src/components/: chat-module.test.tsx  chat-module.tsx  chat-types.ts  conversation-sidebar.test.tsx  conversation-sidebar.tsx  message-composer.test.tsx  message-composer.tsx  message-list.test.tsx  message-list.tsx
frontend/src/components/chat/: chat-composer.test.tsx  chat-composer.tsx  chat-message-list.test.tsx  chat-message-list.tsx  chat-module.test.tsx  chat-module.tsx  chat-types.ts  conversation-sidebar.test.tsx  conversation-sidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  textarea.tsx
frontend/src/hooks/: use-chat-scroll.ts  use-chat-streaming.ts  use-conversation-history.ts  use-conversations.ts  use-model-catalog.ts
